Create a text dedicated for a friend

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" src="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Šūdų Fabrikėlis</title>
 </head>
 <body>
-    Šūdų Fabrikėlis :)
-
-    <script src="./scripts/scripts.js"></script>
+        <div class="dedication"><h2>Lukas Pizdukas</h2></div>
+        <div class="signature"><h3>Tavo mylimas draugas - Mindaugas :) </h3></div>
+        <script src="./scripts/scripts.js"></script>
 </body>
 </html>
